--- a/index.html
+++ b/index.html
@@ -134,15 +134,8 @@
 				<section id="three" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
-						<header>
-						    <h3>¿Quieres colaborar con nosotros?</h3>
-							<p>Aprovecha la oportunidad de establecer nuevas conexiones profesionales y profundizar en las últimas tendencias y avances en robótica y tecnologías emergentes, evidenciando el impacto de proyectos interdisciplinarios ante desafíos contemporáneos.</p>
-						</header>
 						<h3>Fortalece tus redes de colaboración.</h3>
-						<p>Si eres estudiante y tienes la disposición y motivación para apoyar en tareas de logística que se requieran los días del evento, contáctanos.</p>
-						<ul class="actions">
-                            <li><a href="voluntariado.html" class="button">Explora el voluntariado</a></li>
-						</ul>
+						<p>Si eres estudiante y tienes la disposición y motivación para apoyar en tareas de logística que se requieran los días del evento, contáctanos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología), rama.ieee@unab.cl (Rama Estudiantil IEEE UNAB) o miguel.solis@unab.cl (Dir. de Ing. en Automatización y Robótica UNAB).</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Siguiente</a>
 				</section>
