--- a/faq.html
+++ b/faq.html
@@ -80,7 +80,7 @@
 
                     <h3>Contacto</h3>
                     <h4>¿A quién puedo contactar si tengo más preguntas?</h4>
-                    <p>Si tienes más preguntas, puedes contactarnos a través de la sección de Contacto en nuestro sitio web. Estaremos encantados de ayudarte.</p>
+                    <p>Si tienes más preguntas, puedes contactarnos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología), rama.ieee@unab.cl (Rama Estudiantil IEEE UNAB) o miguel.solis@unab.cl (Dir. de Ing. en Automatización y Robótica UNAB). Estaremos encantados de ayudarte.</p>
                 </section>
             </div>
         </div>
