--- a/programa.html
+++ b/programa.html
@@ -65,7 +65,7 @@
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Apertura</td></tr>
                                 <tr><td>10:00 a.m.</td><td>Dr. Oswaldo Menéndez</td><td rowspan="3" align="center">Exposición</td><td rowspan="3" align="center">Calibración y pruebas</td></tr>
                                 <tr><td>11:00 a.m.</td><td>Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Dr. Juan Vásconez</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Experto 2</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
                                 <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
                                 <tr><td>3:30 p.m.</td><td>Panel de Discusión</td></tr>
@@ -87,11 +87,11 @@
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Dr. Miguel Gutiérrez-Gaitán</td></tr>
+                                <tr><td>10:00 a.m.</td><td>Experto 3</td></tr>
                                 <tr><td>11:00 a.m.</td><td>Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Dr. Juan Bekios</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Experto 4</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
+                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Semifinales y Final</td></tr>
                                 <tr><td>3:30 p.m.</td><td colspan="3" align="center">Feria NERT</td></tr>
                                 <tr><td>4:00 p.m.</td><td colspan="3" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
