--- a/programa.html
+++ b/programa.html
@@ -87,11 +87,11 @@
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Experto 3</td></tr>
+                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td rowspan="3" align="center">Exposición</td><td rowspan="2" align="center">Calibración y pruebas</td></tr></tr>
                                 <tr><td>11:00 a.m.</td><td>Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Experto 4</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Experto 4</td><td></td><td>Semifinales</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Semifinales y Final</td></tr>
+                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Final</td></tr>
                                 <tr><td>3:30 p.m.</td><td colspan="3" align="center">Feria NERT</td></tr>
                                 <tr><td>4:00 p.m.</td><td colspan="3" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
