--- a/programa.html
+++ b/programa.html
@@ -87,7 +87,7 @@
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td rowspan="3" align="center">Exposición</td><td rowspan="2" align="center">Calibración y pruebas</td></tr></tr>
+                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td>Exposición</td><td>Calibración y pruebas</td></tr></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
                                 <tr><td>11:30 a.m.</td><td>Experto 4</td><td>Exposición</td><td>Semifinales</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
