--- a/ubicacion.html
+++ b/ubicacion.html
@@ -90,7 +90,7 @@
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
 				<a href="https://www.multifactory.cl" target="_blank"><img src="images/multifactory.png" width="130"></a>
 				<a href="#"><img src="images/ieeesbunab.png" width="300"></a>
-				<a href="#"><img src="images/logo_nert.png" width="130"></a>
+				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logo_nert.png" width="130"></a>
 
 					<h3>Patrocina:</h3>
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
