--- a/programa.html
+++ b/programa.html
@@ -57,17 +57,17 @@
                                     <th>Hora</th>
                                     <th>Congreso</th>
 				    <th>Feria</th>
-				    <th>Competencia</th>
+				    <th>Competencia NERT</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr><td>9:00 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Apertura</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Dr. Oswaldo Menéndez</td><td>Exposición</td><td>Calibración y pruebas</td></tr>
+                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez</a></td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Experto 2</td><td>Exposición</td><td>Calibración y pruebas</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Experto 2</td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
+                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
                                 <tr><td>3:30 p.m.</td><td>Panel de Discusión</td></tr>
                                 <tr><td>4:30 p.m.</td><td colspan="3" align="center">Cierre Día 1</td></tr>
                             </tbody>
@@ -82,17 +82,17 @@
                                     <th>Hora</th>
                                     <th>Congreso</th>
 				    <th>Feria</th>
-				    <th>Competencia</th>
+				    <th>Competencia NERT</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td>Exposición</td><td>Calibración y pruebas</td></tr></tr>
+                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Experto 4</td><td>Exposición</td><td>Semifinales</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Experto 4</td><td>Exposición NERT</td><td>Semifinales</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición</td><td rowspan="2" align="center">Final</td></tr>
-                                <tr><td>3:30 p.m.</td><td colspan="3" align="center">Feria NERT</td></tr>
+                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td><td rowspan="2" align="center">Final</td></tr>
+                                <tr><td>3:30 p.m.</td><td colspan="3" align="center">Exposición NERT</td></tr>
                                 <tr><td>4:00 p.m.</td><td colspan="3" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
                         </table>
