--- a/programa.html
+++ b/programa.html
@@ -63,7 +63,7 @@
                             <tbody>
                                 <tr><td>9:00 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Apertura</td></tr>
-                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez</a></td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
+                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez<br>Advancements in Displacement Current-Based Self-Powered Sensors for Precision Agriculture</a></td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
                                 <tr><td>11:30 a.m.</td><td>Experto 2</td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
