--- a/programa.html
+++ b/programa.html
@@ -81,8 +81,8 @@
                                 <tr>
                                     <th>Hora</th>
                                     <th>Congreso</th>
-				    <th>Feria</th>
-				    <th>Competencia NERT</th>
+				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
+				    <th>Competencia <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
                                 </tr>
                             </thead>
                             <tbody>
