--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 									<ul>
 										<li><a href="itinerario.html">Itinerario</a></li>
 										<li><a href="paneles.html">Presentaciones</a></li>
-										<li><a href="talleres.html">Talleres</a></li>
 									</ul> -->
 								</li>
 								<li><a href="ubicacion.html">Ubicación</a></li>
@@ -76,7 +75,7 @@
 									<p>Tendrás la oportunidad de participar de:</p>
 									<ul>
 									<li>Charlas plenarias de expertos</li>
-									<li>Talleres prácticos</li>
+									<li>Panel de discusión</li>
 									<li>Feria de proyectos estudiantiles</li>
 									</ul>
 								</div>
@@ -167,12 +166,9 @@
 			<div class="container">
 				<header>
 					<h2>Únete al Congreso Hoy</h2>
-					<p>¡Las inscripciones cierran el 04 de noviembre!</p>
-					<p>Inscríbete ahora y asegura tu lugar en el Congreso Nacional de Robótica y Tecnologías Emergentes.</p>
+					<p>¡Visítanos en Antonio Varas 807 este 21 y 22 de noviembre!</p>
+					<p>Consultas al correo <a href="mailto:estudiantes.nert@unab.cl">estudiantes.nert@unab.cl</a>.</p>
 				</header>
-				<div class="row gtr-uniform gtr-50">
-					<div class="col-12"><a href="https://forms.gle/cBzPikyNcHevhkLJA" class="button primary fit">Registrarme</a></div>
-				</div>
 			</div>
 		</section>
 
@@ -181,8 +177,6 @@
 				<footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="https://www.multifactory.cl" target="_blank"><img src="images/multifactory.png" width="130"></a>
-				<a href="#"><img src="images/ieeesbunab.png" width="300"></a>
 				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logo_nert.png" width="130"></a>				
 				<!--
 					<ul class="icons">
