--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-        <title>Congreso Nacional de Robótica y Tecnologías Emergentes</title>
+        <title>Congreso del Núcleo Estudiantil de Robótica y Tecnología</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<div id="page-wrapper">
 
 			<header id="header">
-				<h1 id="logo"><a href="index.html">Congreso Nacional de Robótica y Tecnologías Emergentes</a></h1>
+				<h1 id="logo"><a href="index.html">Congreso del Núcleo Estudiantil de Robótica y Tecnología</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
@@ -35,7 +35,6 @@
 								<li><a href="voluntariado.html">Voluntariado</a></li>
 							</ul>
 						</li>
-						<li><a href="https://forms.gle/cBzPikyNcHevhkLJA" target="_blank">Registro</a></li>
 						<li><a href="sponsors.html">Auspicios</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -46,8 +45,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Conectando a las mentes de hoy</h2>
-							<h2>con las tecnologías del mañana.</h2>
+							<h2>Congreso NERT</h2>
+							<h2>Núcleo Estudiantil de Robótica y Tecnología.</h2>
 							<p>21 y 22 de Noviembre, Santiago, Chile.</p>
 						</header>
 						<span class="image"><img src="images/pic01.png" alt="" /></span>
@@ -63,7 +62,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>El Congreso Nacional de Robótica y Tecnologías Emergentes</h2>
+										<h2>El Congreso del Núcleo Estudiantil de Robótica y Tecnología</h2>
 										<p></p>
 									</header>
 								</div>
