--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<h2>Núcleo Estudiantil de Robótica y Tecnología.</h2>
 							<p>21 y 22 de Noviembre, Santiago, Chile.</p>
 						</header>
-						<span class="image"><img src="images/pic01.png" alt="" /></span>
+						<!-- <span class="image"><img src="images/pic01.png" alt="" /></span> -->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
