--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									</ul> -->
 								</li>
 								<li><a href="ubicacion.html">Ubicación</a></li>
-								<li><a href="voluntariado.html">Voluntariado</a></li>
+								<!-- <li><a href="voluntariado.html">Voluntariado</a></li> -->
 							</ul>
 						</li>
 						<li><a href="sponsors.html">Auspicios</a></li>
