--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>FAQ - Congreso Nacional de Robótica y Tecnologías Emergentes</title>
+    <title>FAQ - Congreso del Núcleo Estudiantil de Robótica y Tecnología</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
         <!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">Congreso Nacional de Robótica y Tecnologías Emergentes</a></h1>
+				<h1 id="logo"><a href="index.html">Congreso del Núcleo Estudiantil de Robótica y Tecnología</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
@@ -30,14 +30,13 @@
 									<ul>
 										<li><a href="itinerario.html">Itinerario</a></li>
 										<li><a href="paneles.html">Presentaciones</a></li>
-										<li><a href="talleres.html">Talleres</a></li>
+
 									</ul> -->
 								</li>
 								<li><a href="ubicacion.html">Ubicación</a></li>
-								<li><a href="voluntariado.html">Voluntariado</a></li>
+
 							</ul>
 						</li>
-						<li><a href="https://forms.gle/cBzPikyNcHevhkLJA" target="_blank">Registro</a></li>
 						<li><a href="sponsors.html">Auspicios</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -49,14 +48,14 @@
             <div class="container">
                 <header class="major">
                     <h2>Preguntas Frecuentes</h2>
-                    <p>Encuentra respuestas a las preguntas más comunes sobre el Congreso Nacional de Robótica y Tecnologías Emergentes.</p>
+                    <p>Encuentra respuestas a las preguntas más comunes sobre el Congreso del Núcleo Estudiantil de Robótica y Tecnología.</p>
                 </header>
 
                 <!-- Section -->
                 <section>
                     <h3>General</h3>
-                    <h4>¿Qué es el Congreso Nacional de Robótica y Tecnologías Emergentes?</h4>
-                    <p>El Congreso Nacional de Robótica y Tecnologías Emergentes es un evento que reúne a profesionales, académicos, investigadores y estudiantes para discutir y explorar las últimas tendencias y avances en robótica y tecnologías emergentes.</p>
+                    <h4>¿Qué es el Congreso del Núcleo Estudiantil de Robótica y Tecnología?</h4>
+                    <p>El Congreso del Núcleo Estudiantil de Robótica y Tecnología es un evento que reúne a profesionales, académicos, investigadores y estudiantes para discutir y explorar las últimas tendencias y avances en robótica y tecnologías emergentes.</p>
 
                     <h4>¿Cuándo y dónde se llevará a cabo el congreso?</h4>
                     <p>El congreso se llevará a cabo los días 21 y 22 de noviembre en la Facultad de Ingeniería de la Universidad Andrés Bello, ubicada en Providencia, Santiago, Chile.</p>
@@ -64,12 +63,12 @@
                     <h4>¿Quiénes pueden asistir al congreso?</h4>
                     <p>El congreso está abierto a profesionales de la industria, académicos, investigadores, estudiantes universitarios y de secundaria, así como a cualquier persona interesada en las tecnologías emergentes y la robótica.</p>
 
-                    <h3>Registro</h3>
+                    <h3>Asistencia</h3>
                     <h4>¿Cómo me registro para asistir al congreso?</h4>
-                    <p>Puedes registrarte para asistir al congreso a través de nuestro sitio web en la sección de Registro.</p>
+                    <p>Si eres estudiante de una institución externa a UNAB, envíanos tu nombre completo y rut al correo <a href="mailto:estudiantes.nert@unab.cl">estudiantes.nert@unab.cl</a>, y te contactaremos de vuelta a la brevedad para confirmar autorización de acceso.</p>
 
                     <h4>¿Cuánto cuesta asistir al congreso?</h4>
-                    <p>El evento es gratuito, pero muchas de las actividades contempladas están sujetas a cupo. Revisa la sección "registro" para obtener mayor información respecto a plazos de inscripción.</p>
+                    <p>El evento es gratuito, pero en caso de ser una actividad de alto interés podríamos tener pocos cupos así que te motivamos a atender temprano.</p>
 
                     <h3>Logística</h3>
                     <h4>¿Hay opciones de alojamiento cerca del lugar del congreso?</h4>
@@ -80,7 +79,7 @@
 
                     <h3>Contacto</h3>
                     <h4>¿A quién puedo contactar si tengo más preguntas?</h4>
-                    <p>Si tienes más preguntas, puedes contactarnos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología), rama.ieee@unab.cl (Rama Estudiantil IEEE UNAB) o miguel.solis@unab.cl (Dir. de Ing. en Automatización y Robótica UNAB). Estaremos encantados de ayudarte.</p>
+                    <p>Si tienes más preguntas, puedes contactarnos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología). Estaremos encantados de ayudarte.</p>
                 </section>
             </div>
         </div>
@@ -89,8 +88,6 @@
 				<footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="https://www.multifactory.cl" target="_blank"><img src="images/multifactory.png" width="130"></a>
-				<a href="#"><img src="images/ieeesbunab.png" width="300"></a>
 				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logo_nert.png" width="130"></a>				
 				
 				<!--
@@ -107,7 +104,7 @@
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
 					
 					<ul class="copyright">
-						<li>&copy; Congreso Nacional de Robótica y Tecnologías Emergentes 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
+						<li>&copy; Congreso del Núcleo Estudiantil de Robótica y Tecnología 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
 					</ul>
 				</footer>
     </div>
