--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
 					
 					<ul class="copyright">
-						<li>&copy; Congreso Nacional de Robótica y Tecnologías Emergentes 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
+						<li>&copy; Congreso del Núcleo Estudiantil de Robótica y Tecnología 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
 					</ul>
 				</footer>
 
