--- a/sponsors.html
+++ b/sponsors.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Auspicio y Colaboración - Congreso Nacional de Robótica y Tecnologías Emergentes</title>
+    <title>Auspicio y Colaboración - Congreso del Núcleo Estudiantil de Robótica y Tecnología</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
         <!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">Congreso Nacional de Robótica y Tecnologías Emergentes</a></h1>
+				<h1 id="logo"><a href="index.html">Congreso del Núcleo Estudiantil de Robótica y Tecnología</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
@@ -30,14 +30,11 @@
 									<ul>
 										<li><a href="itinerario.html">Itinerario</a></li>
 										<li><a href="paneles.html">Presentaciones</a></li>
-										<li><a href="talleres.html">Talleres</a></li>
 									</ul> -->
 								</li>
 								<li><a href="ubicacion.html">Ubicación</a></li>
-								<li><a href="voluntariado.html">Voluntariado</a></li>
 							</ul>
 						</li>
-						<li><a href="https://forms.gle/cBzPikyNcHevhkLJA" target="_blank">Registro</a></li>
 						<li><a href="sponsors.html">Auspicios</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -49,13 +46,13 @@
             <div class="container">
                 <header class="major">
                     <h2>Auspicio y Colaboración</h2>
-                    <p>Conoce a nuestros auspiciadores y descubre cómo puedes colaborar con el Congreso Nacional de Robótica y Tecnologías Emergentes.</p>
+                    <p>Conoce a nuestros auspiciadores y descubre cómo puedes colaborar con el Congreso del Núcleo Estudiantil de Robótica y Tecnología.</p>
                 </header>
 
                 <!-- Section -->
                 <section>
                     <h3>Oportunidades de Auspicio</h3>
-                    <p>El Congreso Nacional de Robótica y Tecnologías Emergentes ofrece diversas oportunidades de auspicio para organizaciones interesadas en apoyar el desarrollo y la difusión de la robótica y las tecnologías emergentes. Al auspiciar este evento, tu organización podrá:</p>
+                    <p>El Congreso del Núcleo Estudiantil de Robótica y Tecnología ofrece diversas oportunidades de auspicio para organizaciones interesadas en apoyar el desarrollo y la difusión de la robótica y las tecnologías emergentes. Al auspiciar este evento, tu organización podrá:</p>
                     <ul>
                         <li>Ganar visibilidad entre una audiencia especializada y apasionada por las tecnologías emergentes.</li>
                         <li>Conectar con profesionales, académicos y estudiantes interesados en robótica y tecnologías emergentes.</li>
@@ -75,7 +72,7 @@
                     <p>Además de los auspicios, también estamos abiertos a colaboraciones con instituciones académicas, centros de investigación, empresas tecnológicas y organizaciones sin fines de lucro que compartan nuestra misión de promover la robótica y las tecnologías emergentes.</p>
 
                     <h3>Contacto para Auspicio y Colaboración</h3>
-                    <p>Si estás interesado en auspiciar o colaborar con el Congreso Nacional de Robótica y Tecnologías Emergentes, por favor contáctanos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología), rama.ieee@unab.cl (Rama Estudiantil IEEE UNAB) o miguel.solis@unab.cl (Dir. de Ing. en Automatización y Robótica UNAB).</p>
+                    <p>Si estás interesado en auspiciar o colaborar con el Congreso del Núcleo Estudiantil de Robótica y Tecnología, por favor contáctanos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología).</p>
                 </section>
             </div>
         </div>
@@ -84,15 +81,13 @@
         <footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="https://www.multifactory.cl" target="_blank"><img src="images/multifactory.png" width="130"></a>
-				<a href="#"><img src="images/ieeesbunab.png" width="300"></a>
 				<a href="#"><img src="images/logo_nert.png" width="130"></a>
 
 					<h3>Patrocina:</h3>
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
 					
 					<ul class="copyright">
-						<li>&copy; Congreso Nacional de Robótica y Tecnologías Emergentes 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
+						<li>&copy; Congreso del Núcleo Estudiantil de Robótica y Tecnología 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
 					</ul>
 
         </footer>
