--- a/ubicacion.html
+++ b/ubicacion.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Ubicación - Congreso Nacional de Robótica y Tecnologías Emergentes</title>
+    <title>Ubicación - Congreso del Núcleo Estudiantil de Robótica y Tecnología</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header id="header">
 			<header id="header">
-				<h1 id="logo"><a href="index.html">Congreso Nacional de Robótica y Tecnologías Emergentes</a></h1>
+				<h1 id="logo"><a href="index.html">Congreso del Núcleo Estudiantil de Robótica y Tecnología</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
@@ -31,14 +31,11 @@
 									<ul>
 										<li><a href="itinerario.html">Itinerario</a></li>
 										<li><a href="paneles.html">Presentaciones</a></li>
-										<li><a href="talleres.html">Talleres</a></li>
 									</ul> -->
 								</li>
 								<li><a href="ubicacion.html">Ubicación</a></li>
-								<li><a href="voluntariado.html">Voluntariado</a></li>
 							</ul>
 						</li>
-						<li><a href="https://forms.gle/cBzPikyNcHevhkLJA" target="_blank">Registro</a></li>
 						<li><a href="sponsors.html">Auspicios</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -88,15 +85,13 @@
         <footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="https://www.multifactory.cl" target="_blank"><img src="images/multifactory.png" width="130"></a>
-				<a href="#"><img src="images/ieeesbunab.png" width="300"></a>
 				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logo_nert.png" width="130"></a>
 
 					<h3>Patrocina:</h3>
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
 					
 					<ul class="copyright">
-						<li>&copy; Congreso Nacional de Robótica y Tecnologías Emergentes 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
+						<li>&copy; Congreso del Núcleo Estudiantil de Robótica y Tecnología 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
 					</ul>
 
         </footer>
