--- a/ubicacion.html
+++ b/ubicacion.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <header class="major">
                     <h2>Ubicación</h2>
-                    <p>Descubre cómo llegar al Congreso Nacional de Robótica y Tecnologías Emergentes.</p>
+                    <p>Descubre cómo llegar al Congreso del Núcleo Estudiantil de Robótica y Tecnología.</p>
                 </header>
 
                 <!-- Section -->
