--- a/programa.html
+++ b/programa.html
@@ -52,21 +52,20 @@
                             <thead>
                                 <tr>
                                     <th>Hora</th>
-                                    <th>Congreso</th>
+                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
 				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
-				    <th>Competencia <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr><td>9:00 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>9:30 a.m.</td><td colspan="3" align="center">Apertura</td></tr>
-                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez<br>Agricultura de Precisión</a></td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
-                                <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Experto 2</td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr>
-                                <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
-                                <tr><td>3:30 p.m.</td><td>Panel de Discusión</td></tr>
-                                <tr><td>4:30 p.m.</td><td colspan="3" align="center">Cierre Día 1</td></tr>
+                                <tr><td>9:00 a.m.</td><td colspan="2" align="center">Acreditación</td></tr>
+                                <tr><td>9:50 a.m.</td><td colspan="2" align="center">Apertura</td></tr>
+                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez<br>Agricultura de Precisión</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>11:00 a.m.</td><td colspan="2" align="center">Coffee Break</td></tr>
+                                <tr><td>11:30 a.m.</td><td><a href="expositor2.html" target="_blank">Franco Jorquera<br>AC3E USM</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
+                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Stelarbox: Robótica avanzada al Servicio de la Inclusión - una colaboración FACH-USACH-TELETÓN</a></td><td rowspan="2" align="center">Exposición NERT</td><td rowspan="2" align="center">Rondas clasificatorias</td></tr>
+                                <tr><td>3:30 p.m.</td><td>Panel de Discusión: Tendencias Actuales y Proyecciones de IA en Robótica Industrial</td></tr>
+                                <tr><td>4:30 p.m.</td><td colspan="2" align="center">Cierre Día 1</td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -77,20 +76,19 @@
                             <thead>
                                 <tr>
                                     <th>Hora</th>
-                                    <th>Congreso</th>
+                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
 				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
-				    <th>Competencia <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td>Experto 3</td><td>Exposición NERT</td><td>Calibración y pruebas</td></tr></tr>
+                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Modelos Interpretables de Aprendizaje Automático para la Caracterización de Biomarcadores en Imágenes de Resonancia Magnética de Pacientes con Enfermedades Neuronales</a></td><td>Exposición NERT</td></tr></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td>Experto 4</td><td>Exposición NERT</td><td>Semifinales</td></tr>
-                                <tr><td>12:30 p.m.</td><td colspan="3" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td><td rowspan="2" align="center">Final</td></tr>
-                                <tr><td>3:30 p.m.</td><td colspan="3" align="center">Exposición NERT</td></tr>
-                                <tr><td>4:00 p.m.</td><td colspan="3" align="center">Cierre y Premiaciones</td></tr>
+                                <tr><td>11:30 a.m.</td><td><a href="expositor1.html" target="_blank">Milton Espinoza<br>Empresa <a href="www.altera.cl" target="_blank">Altera</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
+                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>3:30 p.m.</td><td colspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>4:00 p.m.</td><td colspan="2" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
                         </table>
                     </div>
