--- a/programa.html
+++ b/programa.html
@@ -63,7 +63,7 @@
                                 <tr><td>11:00 a.m.</td><td colspan="2" align="center">Coffee Break</td></tr>
                                 <tr><td>11:30 a.m.</td><td><a href="expositor2.html" target="_blank">Franco Jorquera<br>AC3E USM</a></td><td>Exposición NERT</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
-                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Stelarbox: Robótica avanzada al Servicio de la Inclusión - una colaboración FACH-USACH-TELETÓN</a></td><td rowspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Stelarbox: Robótica avanzada al Servicio de <br>la Inclusión - una colaboración FACH-USACH-TELETÓN</a></td><td rowspan="2" align="center">Exposición NERT</td></tr>
                                 <tr><td>3:30 p.m.</td><td>Panel de Discusión: Tendencias Actuales y Proyecciones de IA en Robótica Industrial</td></tr>
                                 <tr><td>4:30 p.m.</td><td colspan="2" align="center">Cierre Día 1</td></tr>
                             </tbody>
