--- a/programa.html
+++ b/programa.html
@@ -82,11 +82,11 @@
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Modelos Interpretables de Aprendizaje Automático para la <br>Caracterización de Biomarcadores en Imágenes de Resonancia <br>Magnética de Pacientes con Enfermedades Neuronales</a></td><td>Exposición NERT</td></tr></tr>
+                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dra. Pamela Franco<br>Modelos Interpretables de Aprendizaje Automático para la <br>Caracterización de Biomarcadores en Imágenes de Resonancia <br>Magnética de Pacientes con Enfermedades Neuronales</a></td><td>Exposición NERT</td></tr></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
                                 <tr><td>11:30 a.m.</td><td><a href="expositor1.html" target="_blank">Milton Espinoza<br>Empresa <a href="www.altera.cl" target="_blank">Altera</a></td><td>Exposición NERT</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
-                                <tr><td>2:00 p.m.</td><td>Talleres</td><td rowspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Dr. Juan Vásconez<br>Interacción Humano-Robot en Agricultura</a></td><td rowspan="1" align="center">Exposición NERT</td></tr>
                                 <tr><td>3:30 p.m.</td><td colspan="2" align="center">Exposición NERT</td></tr>
                                 <tr><td>4:00 p.m.</td><td colspan="2" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
