--- a/programa.html
+++ b/programa.html
@@ -59,11 +59,11 @@
                             <tbody>
                                 <tr><td>9:00 a.m.</td><td colspan="2" align="center">Acreditación</td></tr>
                                 <tr><td>9:50 a.m.</td><td colspan="2" align="center">Apertura</td></tr>
-                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dr. Oswaldo Menéndez<br>Agricultura de Precisión</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>10:00 a.m.</td><td>Dr. Oswaldo Menéndez<br>Agricultura de Precisión</td><td>Exposición NERT</td></tr>
                                 <tr><td>11:00 a.m.</td><td colspan="2" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td><a href="expositor2.html" target="_blank">Franco Jorquera<br>AC3E USM</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Franco Jorquera<br>AC3E USM</td><td>Exposición NERT</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
-                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Jocelyn Robledo<br>Stelarbox: Robótica avanzada al Servicio de <br>la Inclusión - una colaboración FACH-USACH-TELETÓN</a></td><td rowspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>2:30 p.m.</td><td>Jocelyn Robledo<br>Stelarbox: Robótica avanzada al Servicio de <br>la Inclusión - una colaboración FACH-USACH-TELETÓN</td><td rowspan="2" align="center">Exposición NERT</td></tr>
                                 <tr><td>3:30 p.m.</td><td>Panel de Discusión: Tendencias Actuales y Proyecciones de IA en Robótica Industrial</td></tr>
                                 <tr><td>4:30 p.m.</td><td colspan="2" align="center">Cierre Día 1</td></tr>
                             </tbody>
@@ -82,11 +82,11 @@
                             </thead>
                             <tbody>
                                 <tr><td>9:30 a.m.</td><td colspan="3" align="center">Acreditación</td></tr>
-                                <tr><td>10:00 a.m.</td><td><a href="expositor1.html" target="_blank">Dra. Pamela Franco<br>Modelos Interpretables de Aprendizaje Automático para la <br>Caracterización de Biomarcadores en Imágenes de Resonancia <br>Magnética de Pacientes con Enfermedades Neuronales</a></td><td>Exposición NERT</td></tr></tr>
-                                <tr><td>11:00 a.m.</td><td colspan="3" align="center">Coffee Break</td></tr>
-                                <tr><td>11:30 a.m.</td><td><a href="expositor1.html" target="_blank">Milton Espinoza<br>Empresa <a href="www.altera.cl" target="_blank">Altera</a></td><td>Exposición NERT</td></tr>
+                                <tr><td>10:00 a.m.</td><td>Dra. Pamela Franco<br>Modelos Interpretables de Aprendizaje Automático para la <br>Caracterización de Biomarcadores en Imágenes de Resonancia <br>Magnética de Pacientes con Enfermedades Neuronales</td><td>Exposición NERT</td></tr></tr>
+                                <tr><td>11:00 a.m.</td><td colspan="2" align="center">Coffee Break</td></tr>
+                                <tr><td>11:30 a.m.</td><td>Milton Espinoza<br>Empresa <a href="www.altera.cl" target="_blank">Altera</a></td><td>Exposición NERT</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
-                                <tr><td>2:30 p.m.</td><td><a href="expositor1.html" target="_blank">Dr. Juan Vásconez<br>Interacción Humano-Robot en Agricultura</a></td><td rowspan="1" align="center">Exposición NERT</td></tr>
+                                <tr><td>2:30 p.m.</td><td>Dr. Juan Vásconez<br>Interacción Humano-Robot en Agricultura</td><td rowspan="1" align="center">Exposición NERT</td></tr>
                                 <tr><td>3:30 p.m.</td><td colspan="2" align="center">Exposición NERT</td></tr>
                                 <tr><td>4:00 p.m.</td><td colspan="2" align="center">Cierre y Premiaciones</td></tr>
                             </tbody>
