--- a/programa.html
+++ b/programa.html
@@ -52,8 +52,8 @@
                             <thead>
                                 <tr>
                                     <th>Hora</th>
-                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
-				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
+                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a><br>A1-SAL001</th>
+				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a><br>Patio A1</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -76,8 +76,8 @@
                             <thead>
                                 <tr>
                                     <th>Hora</th>
-                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
-				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a></th>
+                                    <th>Congreso <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a><br>A1-SAL001</th>
+				    <th>Feria <a href="https://www.instagram.com/nert.unab" target="_blank">NERT</a><br>Patio A1</th>
                                 </tr>
                             </thead>
                             <tbody>
