--- a/ubicacion.html
+++ b/ubicacion.html
@@ -89,6 +89,7 @@
 
 					<h3>Patrocina:</h3>
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
+					<a href="https://www.fach.mil.cl/" target="_blank"><img src="images/logofach.png" width="130"></a>
 					
 					<ul class="copyright">
 						<li>&copy; Congreso del Núcleo Estudiantil de Robótica y Tecnología 2024. Todos los derechos reservados.</li><li>Sitio desarrollado por: <a href="http://multifactory.cl">Multifactory</a></li>
