--- a/programa.html
+++ b/programa.html
@@ -16,21 +16,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
-						<li>
-							<a href="#">Congreso</a>
-							<ul>
-								<li>
-									<a href="programa.html">Programa</a>
-									<!--
-									<ul>
-										<li><a href="itinerario.html">Itinerario</a></li>
-										<li><a href="paneles.html">Presentaciones</a></li>
-									</ul> -->
-								</li>
-								<li><a href="ubicacion.html">Ubicación</a></li>
-							</ul>
-						</li>
-						<li><a href="sponsors.html">Auspicios</a></li>
+						<li><a href="programa.html">Programa</a></li>
+						<li><a href="ubicacion.html">Ubicación</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 					</ul>
 				</nav>
