--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<header>
 					<h2>Únete al Congreso Hoy</h2>
 					<p>¡Visítanos en Antonio Varas 807 este 21 y 22 de noviembre!</p>
-					<p>Consultas al correo <b><a href="mailto:estudiantes.nert@unab.cl">estudiantes.nert@unab.cl</a></b>.</p>
+					<p>Consultas al correo <b>estudiantes.nert@unab.cl</b>.</p>
 				</header>
 			</div>
 		</section>
