--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<h3>Fortalece tus redes de colaboración.</h3>
-						<p>Si eres estudiante y tienes la disposición y motivación para apoyar en tareas de logística que se requieran los días del evento, contáctanos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología), rama.ieee@unab.cl (Rama Estudiantil IEEE UNAB) o miguel.solis@unab.cl (Dir. de Ing. en Automatización y Robótica UNAB).</p>
+						<p>Si eres estudiante y tienes la disposición y motivación para apoyar en tareas de logística que se requieran los días del evento, contáctanos a través de estudiantes.nert@unab.cl (Núcleo Estudiantil de Robótica y Tecnología).</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Siguiente</a>
 				</section>
