--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logo_nert.png" width="130"></a>				
+				<a href="https://www.instagram.com/nert.unab" target="_blank"><img src="images/logonert.jpeg" width="130"></a>				
 				<!--
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
