--- a/sponsors.html
+++ b/sponsors.html
@@ -81,7 +81,7 @@
         <footer id="footer">
 				<h3>Organiza:</h3>
 				<a href="https://www.unab.cl/admision/carreras/ingenieria-automatizacion-robotica/" target="_blank"><img src="images/logo_iar.png" width="250"></a>
-				<a href="#"><img src="images/logo_nert.png" width="130"></a>
+				<a href="#"><img src="images/logonert.png" width="130"></a>
 
 					<h3>Patrocina:</h3>
 					<a href="https://www.innovacionyrobotica.com" target="_blank"><img src="images/cir.png" width="230"></a>
