--- a/programa.html
+++ b/programa.html
@@ -50,7 +50,7 @@
                                 <tr><td>11:00 a.m.</td><td colspan="2" align="center">Coffee Break</td></tr>
                                 <tr><td>11:30 a.m.</td><td><b>Franco Jorquera</b><br>AC3E USM</td><td>Exposición NERT</td></tr>
                                 <tr><td>12:30 p.m.</td><td colspan="2" align="center">Almuerzo</td></tr>
-                                <tr><td>2:30 p.m.</td><td><b>Jocelyn Robledo</b><br>Stelarbox: Robótica avanzada al Servicio de <br>la Inclusión - una colaboración FACH-USACH-TELETÓN</td><td rowspan="2" align="center">Exposición NERT</td></tr>
+                                <tr><td>2:30 p.m.</td><td><b>Joselyn Robledo</b><br>Stelarbot: Robótica avanzada al Servicio de <br>la Inclusión - una colaboración FACH-USACH-TELETÓN</td><td rowspan="2" align="center">Exposición NERT</td></tr>
                                 <tr><td>3:30 p.m.</td><td>Panel de Discusión: Tendencias Actuales y Proyecciones de IA en Robótica Industrial</td></tr>
                                 <tr><td>4:30 p.m.</td><td colspan="2" align="center">Cierre Día 1</td></tr>
                             </tbody>
